--- a/frontend/app/deals/controllers/form.html
+++ b/frontend/app/deals/controllers/form.html
@@ -183,7 +183,7 @@
 
             <form-portlet portlet-title="Tags">
                 <form-portlet-body>
-                    <form-group label-title="Tags" label-id="id_tags" label-icon="tags" field="dealForm.tags">
+                    <form-group label-title="Tags" label-id="id_tags" field="dealForm.tags">
                         <tag-input ng-if="vm.deal" object="vm.deal"></tag-input>
                     </form-group>
                 </form-portlet-body>
